--- a/index.html
+++ b/index.html
@@ -1,81 +1,209 @@
-<html>
-  <link rel="stylesheet" href="./leo.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="Myscript.js"></script>
-  <body>
-<header>
-  <nav>
-    <link rel="stylesheet" href="./leo.css">
-    <h1>Resident evil 4 remake</h1>
- <ul>
-  <li><a href="https://www.youtube.com/watch?v=EyvrjE9jaKw">3 Trailer de resident evil 4 remake</a></li>
-  <li><a href="https://www.youtube.com/watch?v=Hw86V4zFb28">2 Trailer de resident evil 4 remake</a></li>
-  <li><a href="https://www.youtube.com/watch?v=pQsyi4j1RqM">1 Trailer de historia resident evil 4 remake</a></li>
-  <li><a href="https://www.youtube.com/watch?v=NKi-GNsBgiQ&list=WL&index=4">Algo random cool</a></li>
-  <li><a href="https://www.youtube.com/watch?v=7Zu6Jt4wtWQ&list=WL&index=9">Otra cosa random cool</a></li>
-</ul>
-  </nav>
-</header>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<p id='visor_imagenes'>Sobrevivir es solo el principio.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./estilos.css">
+  <title>Dorados</title>
+</head>
+<body>
+  <!-- Header -->
+  <section id="header">
+    <div class="header container">
+      <div class="nav-bar">
+        <div class="brand">
+          <a href="#">
+            <h1><span>De</span>vuelta<span>a</span>casa</h1>
+          </a>
+        </div>
+        <div class="nav-list">
+          <div class="hamburger">
+            <div class="bar"></div>
+          </div>
+          <ul>
+            <li><a href="#Torneo" data-after="Dorados">Torneos</a></li>
+            <li><a href="#services" data-after="Service">Redes Sociales</a></li>
+            <li><a href="#PROJECTS" data-after="Plantilla">Plantilla</a></li>
+            <li><a href="#about" data-after="About">Ubicacion </a></li>
+            <li><a href="#contact" data-after="Contact">Contacto</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Header -->
+  <!-- Hero Section  -->
+  <section id="hero">
+    <div class="hero container">
+      <div>
+        <center><h1>DE VUELTA A CASA<span></span></h1>
+        <h1>ASOCIACION DE RESCATE Y ADOPCION ANIMAL<span></span></h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1>SOBRE NOSOTROS<span></span></h1>
+        <br>
+        <br>
+        <h1>Esta asociación se creó con el objetivo de ayudar a todos los animales<span></span></h1>
+        </center>
+      </div>
+    </div>
 
-  Seis años después de la catástrofe biológica en Raccoon City, el agente Leon S. Kennedy, uno de los supervivientes del desastre, ha sido enviado a rescatar a la hija del presidente, a quien han secuestrado. Siguiendo su rastro, llega a una apartada población europea, donde sus habitantes sufren un mal terrible. Así comienza esta historia de un arriesgado rescate y terror escalofriante donde se cruzan la vida y la muerte, y el miedo y la catarsis.
-  
-  Con una mecánica de juego modernizada, una historia reimaginada y unos gráficos espectacularmente detallados, Resident Evil 4 supone el renacimiento de un gigante del mundo de los videojuegos.
-  
-  Revive la pesadilla que revolucionó el género del survival horror.</p>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-<div class="container">
-  
-  <div class="container">
-  
-    <ul class="slider">
-      <li id="slide1">
-        <img src="https://i.ytimg.com/vi/YS8K-02xPPM/maxresdefault.jpg"/>
-      </li>
-      <li id="slide2">
-        <img src="https://www.residentevil.com/re4/assets/images/topics/thumb-221021-gl.jpg"/>
-      </li>
-      <li id="slide3">
-        <h1>Edición deluxe de resident evil 4 remake</h1>
-        <p>Imagen del contenido extra de la edición deluxe</p>
-        <img src="https://cdn-ext.fanatical.com/production/product/1280x720/3fe4b7dd-bbc2-409d-b775-eb78cd24f286.jpeg">
-      </li>
-    </ul>
     
-    <ul class="menu">
-      <li>
-        <a href="#slide1">1</a>
-      </li>
-      <li>
-        <a href="#slide2">2</a>
-      </li>
-      <li>
-       <a href="#slide3">3</a>
-     </li>
-   </ul>
- 
-   </body>
-   </html>
- </div>
-<link rel="stylesheet" href="./leo.css">
-<footer>
-<div class="footerContent">
-  <p>Capcom</p>
-</div>
-</footer>
+  </section>
+  <!-- End Hero Section  -->
+  <!-- Service Section -->
+  <!-- End Service Section -->
+  <!-- Projects Section -->
+  <section id="projects">
+    <div class="projects container">
+      <div class="projects-header">
+        <h1 class="section-title">Recent <span>Projects</span></h1>
+      </div>
+      <div class="all-projects">
+        <div class="project-item">
+          <div class="project-info">
+            <h1>SOBRE NOSOTROS</h1>
+            <h2>Esta asociación se creo con el objetivo de ayudar a todos esos animales que constantemente  </h2>
+            
+          </div>
+          <div class="project-img">
+            <img src="https://scontent.ftij2-1.fna.fbcdn.net/v/t39.30808-6/334936337_6250401561685298_7381283131750343479_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=7hGD8pvICM4AX8GUv9Q&_nc_ht=scontent.ftij2-1.fna&oh=00_AfC6JAquFvo7dme5dtHAguVPAycFlNqmaA2XnwSILeqZrQ&oe=64234BAD" alt="img">
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Victoria</h1>
+            <h2>La primera Victoria de Dorados</h2>
+            <p>En la jornada de la liga de la zona norte, Dorados tuvo un enfrentamiento contra scorpions,
+              un partido que fue muy equilibrado con un resultado positivo de 6-5 dando la victoria a dorados fc con un marcador muy cerrado</p>
+          </div>
+          <div class="project-img">
+            <img src="https://scontent.ftij3-1.fna.fbcdn.net/v/t39.30808-6/327795179_724781055658375_8152154620318586128_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=730e14&_nc_ohc=4snPyfyaLHsAX8OLr7R&_nc_ht=scontent.ftij3-1.fna&oh=00_AfD6ZX0X1SQeWMuTlJsgI3nU2D_Uq60ZmDshwv5OXW6KSg&oe=642CBA75" alt="img">
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Inter Prepas</h1>
+            <h2>Primer Torneo Profecional</h2>
+            <p>Este fue el siguiente paso para dorados, participar en en tuorno profecional en tijuana baja california,
+              donde participan preparatoria como Cetys Univerisidad, Cecyte, Lazaro Cardenas, etc.
+            El torneo se juega en la academia real de futbol rapido.</p>
+          </div>
+          <div class="project-img">
+            <img src="https://scontent.ftij3-2.fna.fbcdn.net/v/t39.30808-6/335029221_5920596228057443_6048010190233149093_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=6wyouEKugssAX-zUo8W&_nc_ht=scontent.ftij3-2.fna&oh=00_AfBDnaRjnOuujLZpzOYCTrV7yKicfOolKxFsAYuZK58Lqg&oe=642BF26C" alt="img">
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Amistoso Futbol 11</h1>
+            <h2>Dorados vs Elite Tijuana.</h2>
+            <p>Este Amistoso es para preparacion para entrar a los toneos de futbol 11
+              en el torneo de inter prepas de baja california donde juegan equipos y
+              preparatoria de todo el municipio de una edad de 15 a 19 anos de edad, el amistoso se jugara contra un equipob profesional</p>
+          </div>
+          <div class="project-img">
+            <img src="https://scontent.ftij3-2.fna.fbcdn.net/v/t39.30808-6/338372765_225478033483129_6023211647318094367_n.jpg?stp=dst-jpg_s1080x2048&_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=q3zu95NvX2oAX-oTo_h&_nc_ht=scontent.ftij3-2.fna&oh=00_AfAafsNSxSsZtwf2s6Qi2DfO6YrflQG5BB6sltzdgFk4yg&oe=642B802D" alt="img">
+          </div>
+        </div>
+  </section>
+  <!-- End Projects Section -->
+  <!-- About Section -->
+  <section id="about">
+    <div class="about container">
+      <div class="col-left">
+        <div class="about-img">
+          <img src="https://scontent.ftij3-1.fna.fbcdn.net/v/t39.30808-6/334969326_1535395343615536_3561186582196800768_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=LQGtOqtKnAsAX9r6ReA&_nc_ht=scontent.ftij3-1.fna&oh=00_AfBJIK1XngqSl9nuGJ3qMoiDgKT8Sysa-74YIujOCcbiSg&oe=642B7375" alt="img">
+        </div>
+      </div>
+      <div class="col-right">
+        <h1 class="section-title">Union <span></span></h1>
+        <h2>Quieres ser parte del equipo?</h2>
+        <p>Dorados es un equipo muy deportivo con valores y principios,
+          si gustas unirte a esta institucion no dudes en postularte para ser el proximo jugador de dorados,
+        todo el mundo tiene las puertas abiertas </p>
+        <a href="https://linktr.ee/sanchezjose" class="cta">Unete Aqui</a>
+      </div>
+    </div>
+  </section>
+  <!-- End About Section -->
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="contact container">
+      <div>
+        <h1 class="section-title">Contact <span>info</span></h1>
+      </div>
+      <div class="contact-items">
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+          <div class="contact-info">
+            <h1>Phone</h1>
+            <h2>+52 664 504 9330</h2>
+            <h2>+52 123 456 7890-</h2>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+          <div class="contact-info">
+            <h1>Email</h1>
+            <h2>info@gmail.com</h2>
+            <h2>abcd@gmail.com</h2>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
+          <div class="contact-info">
+            <h1>Lugar</h1>
+            <h2>Academia real de futbol</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Contact Section -->
+  <!-- Footer -->
+  <section id="footer">
+    <div class="footer container">
+      <div class="brand">
+        <h1><span>D</span>orados <span></span>TJ FC</h1>
+      </div>
+      <h2></h2>
+      <div class="social-icon">
+        <div class="social-item">
+          <a href="https://linktr.ee/sanchezjose"><img src="https://scontent.ftij2-1.fna.fbcdn.net/v/t39.30808-6/334969326_1535395343615536_3561186582196800768_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=NwmPYT4btm0AX_xcrjH&_nc_ht=scontent.ftij2-1.fna&oh=00_AfA5YVtxozaqPN2ytmCc7t_OYQ_L-nFctp0e9GdgDMsWaQ&oe=64238A75" /></a>
+      </div>
+      <p>Copyright © 2023  DoradosTJ FC reserved</p>
+    </div>
+  </section>
+  <!-- End Footer -->
+  <script src="./app.js"></script>
 </body>
 </html>
+<div class="nav-list">
+  <div class="hamburger">
+    <div class="bar"></div>
+  </div>
+  <ul>
+    <li><a href="#Torneo" data-after="Dorados">Torneos</a></li>
+    <li><a href="#services" data-after="Service">Redes Sociales</a></li>
+    <li><a href="#PROJECTS" data-after="Plantilla">Plantilla</a></li>
+    <li><a href="#about" data-after="About">Ubicacion </a></li>
+    <li><a href="#contact" data-after="Contact">Contacto</a></li>
+  </ul>
+</div>
+</div>
+</div>
+</section>
+
+
+
+
+
+
+
+
+
