Cambios en contenido

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
-        <h1 class="section-title">Recent <span>Projects</span></h1>
+        
       </div>
       <div class="all-projects">
         <div class="project-item">
@@ -75,8 +75,8 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Victoria</h1>
-            <h2>La primera Victoria de Dorados</h2>
+            <h1>PERROOOOOOO</h1>
+            <h2>Gatooooooooooo</h2>
             <p>En la jornada de la liga de la zona norte, Dorados tuvo un enfrentamiento contra scorpions,
               un partido que fue muy equilibrado con un resultado positivo de 6-5 dando la victoria a dorados fc con un
               marcador muy cerrado</p>
