--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">Union <span></span></h1>
-        <h2>Quieres ser parte del equipo?</h2>
-        <p>Dorados es un equipo muy deportivo con valores y principios,
-          si gustas unirte a esta institucion no dudes en postularte para ser el proximo jugador de dorados,
-          todo el mundo tiene las puertas abiertas </p>
-        <a href="https://linktr.ee/sanchezjose" class="cta">Unete Aqui</a>
+        <h1 class="section-title">Donaciones<span></span></h1>
+        <center><h2>Ayudanos a seguir rescantando caninos para darles un nuevo hogar</h2></center>
+        <p>puede donar a nuestra comunidad para poder seguir mejorando y expandiendo nuestros recursos para seguir apoyando a los perros que nesesitan un hogar</p>
+        <center><img src="https://us.123rf.com/450wm/iridi/iridi2002/iridi200200052/140822513-el-comerciante-de-perros-beige-con-anteojos-sostiene-un-cuaderno-en-espiral-con-gr%C3%A1ficos-financieros.jpg?ver=6" 
+        width="550" height="500"/></center>
+        <center><a href="https://linktr.ee/sanchezjose" class="cta">¡Dona aqui!</a></center>
       </div>
     </div>
   </section>
