--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./estilos.css">
-  <link rel="stylesheet" href="./menu.css"> 
+  <link rel="stylesheet" href="./menu.css">
   <title>De Vuelta a casa</title>
 </head>
 
 <body>
-  <!-- Header -->  
+  <!-- Header -->
   <section class="top-nav">
     <div>
       Logo Here
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
-    <div class='menu-button'></div>
-  </label>
+      <div class='menu-button'></div>
+    </label>
     <ul class="menu">
       <li>One</li>
       <li>Two</li>
@@ -28,161 +28,26 @@
   </section>
   <!-- End Header -->
 
-  <!-- Service Section -->
-  <!-- End Service Section -->
   <!-- Projects Section -->
   <section id="projects">
-    <div class="projects container">
-      <div class="projects-header">
-        
-      </div>
-      <div class="all-projects">
-        <div class="project-item">
-          <div class="project-info">
-            <h1>SOBRE NOSOTROS</h1>
-            <h2>Esta asociación se creo con el objetivo de ayudar a todos esos animales que constantemente </h2>
 
-          </div>
-          <div class="project-img">
-            <img
-              src="https://scontent.ftij2-1.fna.fbcdn.net/v/t39.30808-6/334936337_6250401561685298_7381283131750343479_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=7hGD8pvICM4AX8GUv9Q&_nc_ht=scontent.ftij2-1.fna&oh=00_AfC6JAquFvo7dme5dtHAguVPAycFlNqmaA2XnwSILeqZrQ&oe=64234BAD"
-              alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>PERROOOOOOO</h1>
-            <h2>Gatooooooooooo</h2>
-            <p>En la jornada de la liga de la zona norte, Dorados tuvo un enfrentamiento contra scorpions,
-              un partido que fue muy equilibrado con un resultado positivo de 6-5 dando la victoria a dorados fc con un
-              marcador muy cerrado</p>
-          </div>
-          <div class="project-img">
-            <img
-              src="https://scontent.ftij3-1.fna.fbcdn.net/v/t39.30808-6/327795179_724781055658375_8152154620318586128_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=730e14&_nc_ohc=4snPyfyaLHsAX8OLr7R&_nc_ht=scontent.ftij3-1.fna&oh=00_AfD6ZX0X1SQeWMuTlJsgI3nU2D_Uq60ZmDshwv5OXW6KSg&oe=642CBA75"
-              alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Inter Prepas</h1>
-            <h2>Primer Torneo Profecional</h2>
-            <p>Este fue el siguiente paso para dorados, participar en en tuorno profecional en tijuana baja california,
-              donde participan preparatoria como Cetys Univerisidad, Cecyte, Lazaro Cardenas, etc.
-              El torneo se juega en la academia real de futbol rapido.</p>
-          </div>
-          <div class="project-img">
-            <img
-              src="https://scontent.ftij3-2.fna.fbcdn.net/v/t39.30808-6/335029221_5920596228057443_6048010190233149093_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=6wyouEKugssAX-zUo8W&_nc_ht=scontent.ftij3-2.fna&oh=00_AfBDnaRjnOuujLZpzOYCTrV7yKicfOolKxFsAYuZK58Lqg&oe=642BF26C"
-              alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Amistoso Futbol 11</h1>
-            <h2>Dorados vs Elite Tijuana.</h2>
-            <p>Este Amistoso es para preparacion para entrar a los toneos de futbol 11
-              en el torneo de inter prepas de baja california donde juegan equipos y
-              preparatoria de todo el municipio de una edad de 15 a 19 anos de edad, el amistoso se jugara contra un
-              equipob profesional</p>
-          </div>
-          <div class="project-img">
-            <img
-              src="https://scontent.ftij3-2.fna.fbcdn.net/v/t39.30808-6/338372765_225478033483129_6023211647318094367_n.jpg?stp=dst-jpg_s1080x2048&_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=q3zu95NvX2oAX-oTo_h&_nc_ht=scontent.ftij3-2.fna&oh=00_AfAafsNSxSsZtwf2s6Qi2DfO6YrflQG5BB6sltzdgFk4yg&oe=642B802D"
-              alt="img">
-          </div>
-        </div>
-  </section>
-  <!-- End Projects Section -->
-  <!-- About Section -->
-  <section id="about">
-    <div class="about container">
-      <div class="col-left">
-        <div class="about-img">
-          <img
-            src="https://scontent.ftij3-1.fna.fbcdn.net/v/t39.30808-6/334969326_1535395343615536_3561186582196800768_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=LQGtOqtKnAsAX9r6ReA&_nc_ht=scontent.ftij3-1.fna&oh=00_AfBJIK1XngqSl9nuGJ3qMoiDgKT8Sysa-74YIujOCcbiSg&oe=642B7375"
-            alt="img">
-        </div>
-      </div>
-      <div class="col-right">
-        <h1 class="section-title">Donaciones<span></span></h1>
-        <center><h2>Ayudanos a seguir rescantando caninos para darles un nuevo hogar</h2></center>
-        <p>puede donar a nuestra comunidad para poder seguir mejorando y expandiendo nuestros recursos para seguir apoyando a los perros que nesesitan un hogar</p>
-        <center><img src="https://us.123rf.com/450wm/iridi/iridi2002/iridi200200052/140822513-el-comerciante-de-perros-beige-con-anteojos-sostiene-un-cuaderno-en-espiral-con-gr%C3%A1ficos-financieros.jpg?ver=6" 
-        width="550" height="500"/></center>
-        <center><a href="https://linktr.ee/sanchezjose" class="cta">¡Dona aqui!</a></center>
-      </div>
     </div>
-  </section>
-  <!-- End About Section -->
-  <!-- Contact Section -->
-  <section id="contact">
-    <div class="contact container">
-      <div>
-        <h1 class="section-title">Contact <span>info</span></h1>
-      </div>
-      <div class="contact-items">
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
-          <div class="contact-info">
-            <h1>Phone</h1>
-            <h2>+52 664 504 9330</h2>
-            <h2>+52 123 456 7890-</h2>
-          </div>
+    <div class="all-projects">
+      <div class="project-item">
+        <div class="project-info">
+          <h1>neque purus feugiat magna</h1>
+          <h2>Lorem ipsum dolor sit amet, </h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc faucibus justo non velit tristique, aliquet
+            elementum mauris volutpat. Aliquam at arcu eu purus congue commodo. Fusce vulputate, nisi nec sollicitudin
+            pharetra, urna quam ullamcorper arcu, sit amet suscipit sapien quam quis ex. Mauris rutrum,
+            leo at suscipit elementum, neque purus feugiat magna, ut semper neque ligula a nibh.
+            Aliquam ultrices mauris risus, quis tincidunt felis ornare eget.</p>
         </div>
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
-          <div class="contact-info">
-            <h1>Email</h1>
-            <h2>info@gmail.com</h2>
-            <h2>abcd@gmail.com</h2>
-          </div>
+        <div class="project-img">
+          <img src="../De-vuelta-a-casa/Assets/husky.png" alt="img">
         </div>
-        <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
-          <div class="contact-info">
-            <h1>Lugar</h1>
-            <h2>Academia real de futbol</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- End Contact Section -->
-  <!-- Footer -->
-  <section id="footer">
-    <div class="footer container">
-      <div class="brand">
-        <h1><span>D</span>orados <span></span>TJ FC</h1>
-      </div>
-      <h2></h2>
-      <div class="social-icon">
-        <div class="social-item">
-          <a href="https://linktr.ee/sanchezjose"><img
-              src="https://scontent.ftij2-1.fna.fbcdn.net/v/t39.30808-6/334969326_1535395343615536_3561186582196800768_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=NwmPYT4btm0AX_xcrjH&_nc_ht=scontent.ftij2-1.fna&oh=00_AfA5YVtxozaqPN2ytmCc7t_OYQ_L-nFctp0e9GdgDMsWaQ&oe=64238A75" /></a>
-        </div>
-        <p>Copyright © 2023 DoradosTJ FC reserved</p>
       </div>
   </section>
-  <!-- End Footer -->
-  <script src="../De-vuelta-a-casa/Scripts/app.js"></script>
 </body>
-
-<!-- <div class="nav-list">
-  <div class="hamburger">
-    <div class="bar"></div>
-  </div>
-  <ul>
-    <li><a href="#Torneo" data-after="Dorados">Torneos</a></li>
-    <li><a href="#services" data-after="Service">Redes Sociales</a></li>
-    <li><a href="#PROJECTS" data-after="Plantilla">Plantilla</a></li>
-    <li><a href="#about" data-after="About">Ubicacion </a></li>
-    <li><a href="#contact" data-after="Contact">Contacto</a></li>
-  </ul>
-</div> -->
-
-</div>
-</div>
-</section>
 
 </html>
