--- a/Ventas.html
+++ b/Ventas.html
@@ -37,16 +37,17 @@
    
     <div class="all-projects">
       <div class="project-item">
-        <div class="project-info">
+        <div class="project-info food">
         <div class="project-img">
-          <img src="../De-vuelta-a-casa/Assets/galleta1.jpg" alt="galleta1"/>
-       <p>GALLETAS ARTESANALES PARA PERROS</p>
+          <img  src="../De-vuelta-a-casa/Assets/galleta1.jpg" alt="galleta1"/>
+       <p align="center">GALLETAS ARTESANALES PARA PERROS</p>
        <P align=center>$150</P> 
      
       </div>
         </div>
       </div>
   </section>
+  
 </body>
 
 </html>
