Menu y pantalla de inicio

--- a/index.html
+++ b/index.html
@@ -6,26 +6,33 @@
   <link rel="stylesheet" href="./estilos.css">
   <link rel="stylesheet" href="./menu.css">
   <title>De Vuelta a casa</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <!-- Header -->
   <section class="top-nav">
     <div>
-      Logo Here
+  
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-      <li>Four</li>
-      <li>Five</li>
+      <li>Inicio</li>
+      <li>Adopcion!</li>
+      <li>Donaciones!</li>
+      <li>Tienda</li>
     </ul>
   </section>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <!-- End Header -->
 
   <!-- Projects Section -->
@@ -35,17 +42,14 @@
     <div class="all-projects">
       <div class="project-item">
         <div class="project-info">
-          <h1>neque purus feugiat magna</h1>
-          <h2>Lorem ipsum dolor sit amet, </h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc faucibus justo non velit tristique, aliquet
-            elementum mauris volutpat. Aliquam at arcu eu purus congue commodo. Fusce vulputate, nisi nec sollicitudin
-            pharetra, urna quam ullamcorper arcu, sit amet suscipit sapien quam quis ex. Mauris rutrum,
-            leo at suscipit elementum, neque purus feugiat magna, ut semper neque ligula a nibh.
-            Aliquam ultrices mauris risus, quis tincidunt felis ornare eget.</p>
+          <h1>DE VUELTA A CASA</h1>
+          <h2>Asociacion de rescate y adopcion animal</h2>
+          <p>Sobre nosotros
+            <br>
+            Esta asociacion se creo con el objetivo de ayudar a todos esos animales que contantemente se encuentran en las calles
+          </p>
         </div>
-        <div class="project-img">
-          <img src="../De-vuelta-a-casa/Assets/husky.png" alt="img">
-        </div>
+       
       </div>
   </section>
 </body>
