datos actualizados "ventas" nicolas

--- a/Ventas.html
+++ b/Ventas.html
@@ -40,14 +40,25 @@
         <div class="project-info food">
         <div class="project-img">
           <img  src="../De-vuelta-a-casa/Assets/galleta1.jpg" alt="galleta1"/>
-       <p align="center">GALLETAS ARTESANALES PARA PERROS</p>
-       <P align=center>$150</P> 
+       <h2 align="center">GALLETAS ARTESANALES PARA PERROS</h2>
+       <h2 align=center>$150</h2> 
      
       </div>
         </div>
       </div>
-  </section>
-  
+    
+<div class="all-projects">
+  <div class="project-item">
+    <div class="project-info food">
+    <div class="project-img">
+      <img  src="../De-vuelta-a-casa/Assets/galleta1.jpg" alt="galleta1"/>
+   <h2 align="center">GALLETAS ARTESANALES PARA PERROs</h2>
+   <h2 align=center>$150</h2> 
+ 
+  </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
