cambios del nuevo item

--- a/Ventas.html
+++ b/Ventas.html
@@ -51,7 +51,7 @@
   <div class="project-item">
     <div class="project-info food">
     <div class="project-img">
-      <img  src="../De-vuelta-a-casa/Assets/galleta1.jpg" alt="galleta1"/>
+      <img  src="../De-vuelta-a-casa/Assets/juguetes para gatos y perros.avif" alt="galleta1"/>
    <h2 align="center">GALLETAS ARTESANALES PARA PERROs</h2>
    <h2 align=center>$150</h2> 
  
