Ultimos cambios del Menu echo por Adrian (falta hacer la ventana de adopciones)

--- a/Donaciones.html
+++ b/Donaciones.html
@@ -19,11 +19,10 @@
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-      <li>Four</li>
-      <li>Five</li>
+      <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
+      <li><a href="../De-vuelta-a-casa/" ninausinuiasni>Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
+      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
     </ul>
   </section>
   <!-- End Header -->
