--- a/Ventas.html
+++ b/Ventas.html
@@ -20,11 +20,10 @@
     </label>
     <center><h1>VENTAS</h1></center>
     <ul class="menu">
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-      <li>Four</li>
-      <li>Five</li>
+      <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
+      <li><a href="../De-vuelta-a-casa/" ninausinuiasni>Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
+      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
     </ul>
   </section>
   <!-- End Header -->
