--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li>Inicio</li>
-      <li>Adopcion!</li>
-      <li>Donaciones!</li>
-      <li>Tienda</li>
+      <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
+      <li><a href="../De-vuelta-a-casa/" ninausinuiasni>Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
+      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
     </ul>
   </section>
   <br>
