--- a/Donaciones.html
+++ b/Donaciones.html
@@ -12,18 +12,17 @@
   <!-- Header -->
   <section class="top-nav">
     <div>
-      Logo Here
+        Donaciones
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-      <li>Four</li>
-      <li>Five</li>
+      <li><a href="#">Inicio</a></li>
+      <li>Adopcion!</li>
+      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a> </li>
+      <li>Tienda</li>
     </ul>
   </section>
   <!-- End Header -->
@@ -45,6 +44,8 @@
         </div>
         <div class="project-img">
           <img src="../De-vuelta-a-casa/Assets/husky.png" alt="img">
+          <input type="checkbox" value="Debit">Debito</input>
+          <input type="checkbox" value="Credit">Credito</input>
         </div>
       </div>
   </section>
