--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
   <link rel="stylesheet" href="./menu.css">
   <title>De Vuelta a casa</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">  
 </head>
 
 <body>
   <!-- Header -->
   <section class="top-nav">
     <div>
-  
+             De vuelta a casa
     </div>
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li>Inicio</li>
+      <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
       <li>Adopcion!</li>
-      <li>Donaciones!</li>
+      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a> </li>
       <li>Tienda</li>
     </ul>
   </section>
@@ -53,5 +53,9 @@
       </div>
   </section>
 </body>
+
+<footer>
+  <script src="../De-vuelta-a-casa/Scripts/app.js"></script>
+</footer>
 
 </html>
