--- a/Donaciones.html
+++ b/Donaciones.html
@@ -1,53 +1,80 @@
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./estilos.css">
+  <link rel="stylesheet" href="./Estilosdona.css">
   <link rel="stylesheet" href="./menu.css">
   <title>De Vuelta a casa</title>
 </head>
-
 <body>
   <!-- Header -->
   <section class="top-nav">
-    <div>
-      Logo Here
-    </div>
+    <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="30" height="30" alt="img">
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
       <div class='menu-button'></div>
     </label>
+    <center><h1>Donaciones</h1></center>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
     <ul class="menu">
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-      <li>Four</li>
-      <li>Five</li>
+      <li><h1>Inicio</h1></li>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
+      <li><h1>¡Adopción!</h1></li>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
+      <li><h1>¡Donaciones</h1></li>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
+      <li><h1>Tienda</h1></li>
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
     </ul>
   </section>
   <!-- End Header -->
-
-  <!-- Projects Section -->
-  <section id="projects">
-
-    </div>
-    <div class="all-projects">
-      <div class="project-item">
-        <div class="project-info">
-          <h1>neque purus feugiat magna</h1>
-          <h2>Lorem ipsum dolor sit amet, </h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc faucibus justo non velit tristique, aliquet
-            elementum mauris volutpat. Aliquam at arcu eu purus congue commodo. Fusce vulputate, nisi nec sollicitudin
-            pharetra, urna quam ullamcorper arcu, sit amet suscipit sapien quam quis ex. Mauris rutrum,
-            leo at suscipit elementum, neque purus feugiat magna, ut semper neque ligula a nibh.
-            Aliquam ultrices mauris risus, quis tincidunt felis ornare eget.</p>
-        </div>
-        <div class="project-img">
-          <img src="../De-vuelta-a-casa/Assets/husky.png" alt="img">
-        </div>
-      </div>
-  </section>
-</body>
-
 </html>
+<div>
+  <center><div class="div"></center>
+  <p class="input-container">
+    <center><h1>Nombre</h1></center>
+    <center><input type="text" placeholder= "Nombre" name="text" id="text" class="input-field" autocomplete="name"></center>
+<p class="input-container">
+  <center><h1>Email</h1></center>
+    <center><input type="text" placeholder="@Gmail" name="text" id="text" class="input-field" autocomplete="name"></center>
+  <center><p class="input-container"></center>
+    <center><h1>Cantidad que se desea donar</h1></center>
+    <center><input type="text" placeholder="$" name="text" id="text" class="input-field" autocomplete="name"></center>
+    <center><h1>Metodo de pago</h1></center>
+    <br>
+    <button style="position:absolute; top:235; left:500;">Debito</button>
+    <button style="position:absolute; top:235; left:640;">Credito</button>
+  <center></div></center>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h2>Si desea donar presencialmente puede realizar el deposito a la siguiente tarjeta</h2>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Viga&display=swap" rel="stylesheet">
+  <br>
+  <center><h1>Nombre</h1></center>
+    <center><input type="text" placeholder="Nombre" name="text" id="text" class="input-field" autocomplete="name"></center>
+    <h3 style="position:absolute; top:385; left:550;">¡Es obligatorio ingresar el nombre!</h3>
+    <br>
+  <center><h1>Gmail</h1></center>
+    <center><input type="text" placeholder="@gmail" name="text" id="text" class="input-field" autocomplete="name"></center>
+    <h4 style="position:absolute; top:450; left:550;">¡Es obligatorio ingresar el correo!</h4>
+    <br>
+    <br>
+    <center><h1>Numero de tarjeta de credito</h1></center>
+    <center><input type="text" placeholder="***********************" name="text" id="text" class="input-field" autocomplete="name"></center>
+    <button style="position:absolute; top:520; left:570;">Enviar</button>
+
