mejoras en visualizacion en items de Ventas

--- a/Ventas.html
+++ b/Ventas.html
@@ -48,26 +48,26 @@
         <div class="project-info food">
           <div class="project-img">
             <img src="../De-vuelta-a-casa/Assets/juguetes.avif" alt="juguetes" />
-            <h2>GALLETAS ARTESANALES PARA PERROs</h2>
-            <h2>$150</h2>
+            <h2>JUGUETES PARA GATOS Y PERROS</h2>
+            <h2>$200</h2>
           </div>
         </div>
       </div>
       <div class="project-item store">
         <div class="project-info food">
           <div class="project-img">
-            <img src="../De-vuelta-a-casa/Assets/juguetes.avif" alt="juguetes" />
-            <h2>GALLETAS ARTESANALES PARA PERROs</h2>
-            <h2>$150</h2>
+            <img src="../De-vuelta-a-casa/Assets/peluche personalisado de mascota.jpg" alt="peluche" />
+            <h2>PELUCHE PERSONALIZADO DE TU MASCOTA</h2>
+            <h2>$500</h2>
           </div>
         </div>
       </div>
       <div class="project-item store">
         <div class="project-info food">
           <div class="project-img">
-            <img src="../De-vuelta-a-casa/Assets/juguetes.avif" alt="juguetes" />
-            <h2>GALLETAS ARTESANALES PARA PERROs</h2>
-            <h2>$150</h2>
+            <img src="../De-vuelta-a-casa/Assets/collares de colores.jpg" alt="collares" />
+            <h2>COLLAR DE COLORES PARA MASCOTA</h2>
+            <h2>$300</h2>
           </div>
         </div>
       </div>
