--- a/Ventas.html
+++ b/Ventas.html
@@ -19,10 +19,10 @@
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
-      <li>Adopcion!</li>
-      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a> </li>
-      <li>Tienda</li>
+      <li><a href="../De-vuelta-a-casa/index.html">Inicio!</a></li>
+      <li><a href="../De-vuelta-a-casa/">Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
+      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas!</a></li>
     </ul>
   </section>
   <br>
