--- a/Donaciones.html
+++ b/Donaciones.html
@@ -19,18 +19,11 @@
       <div class='menu-button'></div>
     </label>    
     <ul class="menu">
-      <li>
-        <h1>Inicio</h1>
-      </li>
-      <li>
-        <h1>¡Adopción!</h1>
-      </li>
-      <li>
-        <h1>¡Donaciones</h1>
-      </li>
-      <li>
-        <h1>Tienda</h1>
-      </li>
+      <li><a href="../De-vuelta-a-casa/index.html">Inicio!</a></li>
+      <li><a href="../De-vuelta-a-casa/">Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
+      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas!</a></li>
+    </ul>
     </ul>
   </section>
   <!-- End Header -->
