--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </label>
     <ul class="menu">
       <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
-      <li><a href="../De-vuelta-a-casa/" ninausinuiasni>Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/">Adopcion!</a></li>
       <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
       <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
     </ul>
