--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
     </label>
     <ul class="menu">
       <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
-      <li><a href="../De-vuelta-a-casa/">Adopcion!</a></li>
+      <li><a href="html">Adopcion!</a></li>
       <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
       <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
+      <li><a href="html">Contacto</a></li>
     </ul>
   </section>
   <br>
@@ -46,9 +47,36 @@
             <br>
             Esta asociacion se creo con el objetivo de ayudar a todos esos animales que contantemente se encuentran en las calles
           </p>
+          <img src="https://estaticos-cdn.prensaiberica.es/clip/66e86d63-f5d3-4752-b019-29e28f5079a5_16-9-discover-aspect-ratio_default_0.jpg" width="500" height="300" />
         </div>
        
       </div>
+      <h1>Casos de exito<hi/>
+      <br>
+      <br>
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://c.files.bbci.co.uk/48DD/production/_107435681_perro1.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://www.nationalgeographic.com.es/medio/2023/04/21/boyero-de-berna-1_10a9bb99_230421205529_800x800.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="https://static.fundacion-affinity.org/cdn/farfuture/PVbbIC-0M9y4fPbbCsdvAD8bcjjtbFc0NSP3lRwlWcE/mtime:1643275542/sites/default/files/los-10-sonidos-principales-del-perro.jpg" class="d-block w-100" alt="...">
+          </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
   </section>
 </body>
 
