--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     </label>
     <ul class="menu">
       <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
-      <li><a href="html">Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/Adopcion.html">Adopcion!</a></li>
       <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
       <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
-      <li><a href="html">Contacto</a></li>
+      <li><a href="../De-vuelta-a-casa/">Contacto</a></li>
     </ul>
   </section>
   <br>
@@ -54,28 +54,58 @@
       <h1>Casos de exito<hi/>
       <br>
       <br>
-      <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="https://c.files.bbci.co.uk/48DD/production/_107435681_perro1.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="https://www.nationalgeographic.com.es/medio/2023/04/21/boyero-de-berna-1_10a9bb99_230421205529_800x800.jpg" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="https://static.fundacion-affinity.org/cdn/farfuture/PVbbIC-0M9y4fPbbCsdvAD8bcjjtbFc0NSP3lRwlWcE/mtime:1643275542/sites/default/files/los-10-sonidos-principales-del-perro.jpg" class="d-block w-100" alt="...">
-          </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      <!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+</head>
+<body>
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ul>
+
+  <!-- Slides -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://4.bp.blogspot.com/-atz5WgBqCys/VxasgrWNCEI/AAAAAAAB9Ao/ClzFWC9eEEcOWygTP4l3m0rEXVpRTX1ggCKgB/s1600/Perritos-cachorros-162.jpg" alt="Image 1">
+      <div class="carousel-caption">
+        <h3>Image 1</h3>
       </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://media.diariopopular.com.ar/adjuntos/143/imagenes/005/662/0005662819.jpg" alt="Image 2">
+      <div class="carousel-caption">
+        <h3>Image 2</h3>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://2.bp.blogspot.com/-b2Ze5w8gXrs/WM5ucgrKaWI/AAAAAAAAAPE/v5Q1rmoL-JcUrP1wprPFs06kuPA_k4tjACLcB/s1600/Fondo%2Bde%2Bpantalla%2Bperros%2B22.jpg" alt="Image 3">
+      <div class="carousel-caption">
+        <h3>Image 3</h3>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controls -->
+  <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+</body>
+</html>
 
   </section>
 </body>
