Relative urls fixes

--- a/Adopcion.html
+++ b/Adopcion.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos.css">
     <link rel="stylesheet" href="./menu.css">
-    <link rel="stylesheet" href="../De-vuelta-a-casa/Carousel.css">
+    <link rel="stylesheet" href="./Carousel.css">
     <title>De Vuelta a casa</title>
 </head>
 
@@ -20,11 +20,12 @@
             <div class='menu-button'></div>
         </label>
         <ul class="menu">
-            <li><a href="../De-vuelta-a-casa/index.html">Inicio!</a></li>
-            <li><a href="../De-vuelta-a-casa/">Adopcion!</a></li>
-            <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
-            <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas!</a></li>
-        </ul>
+            <li><a href="index.html">Inicio!</a></li>
+            <li><a href="Adopcion.html">Adopcion!</a></li>
+            <li><a href="Donaciones.html">Donaciones!</a></li>
+            <li><a href="Ventas.html">Ventas!</a></li>
+            <li><a href="Contacto.html">Contacto!</a></li>
+          </ul>    
     </section>
     <br>
     <br>
@@ -35,17 +36,17 @@
 
     <div class="carousel">
         <figure>
-            <img src="../De-vuelta-a-casa/Assets/galleta1.jpg" alt="Image 1">
+            <img src="Assets/galleta1.jpg" alt="Image 1">
         </figure>
         <figure>
-            <img src="../De-vuelta-a-casa/Assets/husky.png" alt="Image 2">
+            <img src="Assets/husky.png" alt="Image 2">
         </figure>
         <figure>
-            <img src="../De-vuelta-a-casa/Assets/juguetes.avif" alt="Image 3">
+            <img src="Assets/galleta1.jpg" alt="Image 3">
         </figure>
     </div>
 
-    <script src="../De-vuelta-a-casa/Scripts/Carosuel.js"></script>
+    <script src="Scripts/Carosuel.js"></script>
 
 </body>
 
