--- a/Donaciones.html
+++ b/Donaciones.html
@@ -20,12 +20,12 @@
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li><a href="../De-vuelta-a-casa/index.html">Inicio!</a></li>
-      <li><a href="../De-vuelta-a-casa/">Adopcion!</a></li>
-      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
-      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas!</a></li>
-    </ul>
-    </ul>
+      <li><a href="index.html">Inicio!</a></li>
+      <li><a href="Adopcion.html">Adopcion!</a></li>
+      <li><a href="Donaciones.html">Donaciones!</a></li>
+      <li><a href="Ventas.html">Ventas!</a></li>
+      <li><a href="Contacto.html">Contacto!</a></li>
+    </ul>    
   </section>
   <div class="donation">
     <form class="payment_form">
