--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
-      <li><a href="html">Adopcion!</a></li>
-      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
-      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
-      <li><a href="html">Contacto</a></li>
+      <li><a href="index.html">Inicio!</a></li>
+      <li><a href="Adopcion.html">Adopcion!</a></li>
+      <li><a href="Donaciones.html">Donaciones!</a></li>
+      <li><a href="Ventas.html">Ventas!</a></li>
+      <li><a href="Contacto.html">Contacto!</a></li>
     </ul>
   </section>
   <br>
