Carrousel en "inicio" y el carrousel de "Adopcion" a sido reparado :)

--- a/Donaciones.html
+++ b/Donaciones.html
@@ -19,10 +19,11 @@
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li><a href="../De-vuelta-a-casa/index.html">Inicio!</a></li>
-      <li><a href="../De-vuelta-a-casa/">Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
+      <li><a href="../De-vuelta-a-casa/Adopcion.html">Adopcion!</a></li>
       <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
-      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas!</a></li>
+      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
+      <li><a href="../De-vuelta-a-casa/">Contacto</a></li>
     </ul>
     </ul>
   </section>
