--- a/Adopcion.html
+++ b/Adopcion.html
@@ -12,18 +12,17 @@
 <body>
     <!-- Header -->
     <section class="top-nav">
-        <div>
-            Ventas
-        </div>
+        <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="30" height="30" alt="img">   
         <input id="menu-toggle" type="checkbox" />
         <label class='menu-button-container' for="menu-toggle">
             <div class='menu-button'></div>
         </label>
         <ul class="menu">
-            <li><a href="../De-vuelta-a-casa/index.html">Inicio!</a></li>
-            <li><a href="../De-vuelta-a-casa/">Adopcion!</a></li>
-            <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
-            <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas!</a></li>
+      <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
+      <li><a href="../De-vuelta-a-casa/Adopcion.html">Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
+      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
+      <li><a href="../De-vuelta-a-casa/">Contacto</a></li>
         </ul>
     </section>
     <br>
@@ -33,20 +32,67 @@
     <br>
     <!-- End Header -->
 
-    <div class="carousel">
-        <figure>
-            <img src="../De-vuelta-a-casa/Assets/galleta1.jpg" alt="Image 1">
-        </figure>
-        <figure>
-            <img src="../De-vuelta-a-casa/Assets/husky.png" alt="Image 2">
-        </figure>
-        <figure>
-            <img src="../De-vuelta-a-casa/Assets/juguetes.avif" alt="Image 3">
-        </figure>
-    </div>
+    <!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <style>
+    /* Estilo personalizado para el carrusel */
+    #myCarousel {
+      width: 800px; /* Ancho del carrusel */
+      height: 400px; /* Altura del carrusel */
+      margin: 0 auto; /* Centrar el carrusel horizontalmente */
+    }
+    .carousel-item img {
+      width: 100%; /* Ajustar las imágenes al 100% del ancho del carrusel */
+      height: 100%; /* Ajustar las imágenes al 100% de la altura del carrusel */
+    }
+  </style>
+</head>
+<body>
 
-    <script src="../De-vuelta-a-casa/Scripts/Carosuel.js"></script>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicadores -->
+  <ul class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ul>
+
+  <!-- Diapositivas -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img1.jpg" alt="Image 1">
+      <div class="carousel-caption">
+        <h3>Image 1</h3>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="img2.jpg" alt="Image 2">
+      <div class="carousel-caption">
+        <h3>Image 2</h3>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="img3.jpg" alt="Image 3">
+      <div class="carousel-caption">
+        <h3>Image 3</h3>
+      </div>
+    </div>
+  </div>
+
+  <!-- Controles -->
+  <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </body>
-
 </html>
