--- a/Ventas.html
+++ b/Ventas.html
@@ -11,18 +11,17 @@
 <body>
   <!-- Header -->
   <section class="top-nav">
-    <div>
-      Ventas
-    </div>
+    <img src="https://cdn-icons-png.flaticon.com/512/263/263115.png" width="30" height="30" alt="img">   
     <input id="menu-toggle" type="checkbox" />
     <label class='menu-button-container' for="menu-toggle">
       <div class='menu-button'></div>
     </label>
     <ul class="menu">
-      <li><a href="../De-vuelta-a-casa/index.html">Inicio!</a></li>
-      <li><a href="../De-vuelta-a-casa/">Adopcion!</a></li>
+      <li><a href="../De-vuelta-a-casa/index.html">Inicio</a></li>
+      <li><a href="../De-vuelta-a-casa/Adopcion.html">Adopcion!</a></li>
       <li><a href="../De-vuelta-a-casa/Donaciones.html">Donaciones!</a></li>
-      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas!</a></li>
+      <li><a href="../De-vuelta-a-casa/Ventas.html">Ventas</a></li>
+      <li><a href="../De-vuelta-a-casa/">Contacto</a></li>
     </ul>
   </section>
   <br>
