Donaciones form  enhancements

--- a/Donaciones.html
+++ b/Donaciones.html
@@ -10,7 +10,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <title>De Vuelta a casa</title>
 </head>
-
 <body>
   <!-- Header -->
   <section class="top-nav">
@@ -27,27 +26,32 @@
       <li><a href="Contacto.html">Contacto!</a></li>
     </ul>    
   </section>
+  <!-- End Header -->
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+
   <div class="donation">
     <form class="payment_form">
       <h1>Donaciones</h1>
-      <div class="input-container">
-        <h1>Nombre</h1>
-        <input type="text" placeholder="Nombre" name="nombre" id="nombre" class="input-field" autocomplete="name">
-      </div>
-      <div class="input-container">
-        <h1>Email</h1>
-        <input type="email" placeholder="@Gmail" name="email" id="email" class="input-field" autocomplete="email">
-      </div>
-      <div class="input-container">
-        <h1>Cantidad que se desea donar</h1>
-        <input type="text" placeholder="$" name="cantidad" id="cantidad" class="input-field" autocomplete="off">
-      </div>
-      <div class="input-container">
-        <h1>Numero de tarjeta</h1>
-        <input type="text" name="tarjeta" id="tarjeta" class="input-field">
-      </div>
-      <br />
-      <br />
+      <h1>Nombre</h1>
+      <input type="text" placeholder="Nombre" name="text" id="text" class="input-field" autocomplete="name">
+      <p class="input-container">
+      <h1>Apellido</h1>
+      <input type="text" placeholder="" name="text" id="text" class="input-field" autocomplete="name">
+      <p class="input-container">
+      <h1>Cantidad que se desea donar</h1>
+      <input type="text" placeholder="$" name="text" id="text" class="input-field" autocomplete="name">           
+      <h1>Gmail</h1>
+      <input type="text" placeholder="@" name="name" id="name" class="input-field" required>
+      <h1>Numero de Tarjeta</h1>
+      <input type="***********" placeholder="************" name="email" id="email" class="input-field">
+      <h1>Fecha de expiración</h1>
+      <input type="**/**" name="text" id="text" class="input-field">
+      <br/>
+      <br/>
       <button type="submit">Enviar</button>
     </form>
   </div>
@@ -57,5 +61,5 @@
 <footer>
 
 </footer>
-
+<img src="https://png.pngtree.com/png-vector/20230329/ourmid/pngtree-cute-white-dog-png-image_6656184.png" alt="img">
 </html>
